--- a/documentation/asciidoc/stories/assembly_creating_services.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_services.adoc
@@ -24,6 +24,19 @@ include::{topics}/proc_configuring_autoscaling.adoc[leveloffset=+2]
 include::{topics}/proc_configuring_owners.adoc[leveloffset=+2]
 include::{topics}/ref_cache_service_resources.adoc[leveloffset=+2]
 
+//Container resources and storage
+include::{topics}/proc_allocating_storage.adoc[leveloffset=+1]
+include::{topics}/ref_persistent_cache_store.adoc[leveloffset=+2]
+include::{topics}/ref_container_resources.adoc[leveloffset=+1]
+
+//Logging
+include::{topics}/proc_configuring_logging.adoc[leveloffset=+1]
+include::{topics}/ref_logging.adoc[leveloffset=+2]
+
+//Community only
+ifdef::community[]
+include::{topics}/proc_specifying_server_image.adoc[leveloffset=+1]
+endif::community[]
 
 //Labeling
 include::{topics}/proc_adding_custom_labels.adoc[leveloffset=+1]
