--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -1,18 +1,15 @@
 include::{stories}/assembly_installing_operator.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_services.adoc[leveloffset=+1]
-include::{stories}/assembly_adjusting_container_spec.adoc[leveloffset=+1]
-include::{stories}/assembly_shutting_down.adoc[leveloffset=+1]
-include::{stories}/assembly_creating_network.adoc[leveloffset=+1]
-include::{stories}/assembly_securing_connections.adoc[leveloffset=+1]
+include::{stories}/assembly_authentication.adoc[leveloffset=+1]
+include::{stories}/assembly_encryption.adoc[leveloffset=+1]
+include::{stories}/assembly_network_access.adoc[leveloffset=+1]
+include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_xsite.adoc[leveloffset=+1]
+include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_cache_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
-include::{stories}/assembly_connecting_clients.adoc[leveloffset=+1]
-include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
-include::{stories}/assembly_logging.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
-include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_deploying_code.adoc[leveloffset=+1]
 include::{stories}/assembly_eventing.adoc[leveloffset=+1]
-include::{stories}/assembly_reference.adoc[leveloffset=+1]
+include::{stories}/assembly_connecting_clients.adoc[leveloffset=+1]
