--- a/documentation/asciidoc/topics/ref_container_resources.adoc
+++ b/documentation/asciidoc/topics/ref_container_resources.adoc
@@ -1,5 +1,6 @@
 [id='container-resources_{context}']
-= JVM, CPU, and memory resources
+= JVM, CPU, and memory
+You can set JVM options in `Infinispan` CR as well as CPU and memory allocation.
 
 [source,options="nowrap",subs=attributes+]
 ----
@@ -22,8 +23,6 @@ include::yaml/container_resources.yaml[]
 
 |===
 
-== Resource usage
-
 When {ispn_operator} creates {brandname} clusters, it uses `spec.container.cpu` and `spec.container.memory` to:
 
 * Ensure that {k8s} has sufficient capacity to run the {brandname} node. By
@@ -31,14 +30,3 @@ default {ispn_operator} requests **512Mi** of `memory` and **0.5** `cpu` from
 the {k8s} scheduler.
 * Constrain node resource usage. {ispn_operator} sets the values of `cpu` and
 `memory` as resource limits.
-
-== Garbage collection logging
-
-By default, {ispn_operator} does not log garbage collection (GC) messages.
-You can optionally add the following JVM options to direct GC messages to
-stdout:
-
-[source,yaml,options="nowrap",subs=attributes+]
-----
-extraJvmOpts: "-Xlog:gc*:stdout:time,level,tags"
-----
