--- a/documentation/asciidoc/stories/assembly_network_access.adoc
+++ b/documentation/asciidoc/stories/assembly_network_access.adoc
@@ -9,6 +9,7 @@ include::{topics}/proc_getting_internal_service.adoc[leveloffset=+1]
 include::{topics}/proc_exposing_loadbalancer.adoc[leveloffset=+1]
 include::{topics}/proc_exposing_nodeport.adoc[leveloffset=+1]
 include::{topics}/proc_exposing_route.adoc[leveloffset=+1]
+include::{topics}/ref_network_services.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
