--- a/documentation/asciidoc/topics/con_xsite_replication.adoc
+++ b/documentation/asciidoc/topics/con_xsite_replication.adoc
@@ -1,5 +1,7 @@
 [id='cross-site-replication_{context}']
-= Cross-site replication with {ispn_operator}
+= Using {ispn_operator} to manage cross-site connections
+An {ispn_operator} in one data center can discover an {ispn_operator} in another data center and automatically form cross-site views to create global {brandname} clusters.
+
 The following illustration provides an example in which {ispn_operator} manages a {brandname} cluster at a data center in New York City, **NYC**.
 At another data center in London, **LON**, {ispn_operator} also manages a {brandname} cluster.
 
@@ -13,6 +15,11 @@ endif::downstream[]
 
 {ispn_operator} uses the Kubernetes API to establish a secure connection between the {ocp} clusters in **NYC** and **LON**.
 {ispn_operator} then creates a cross-site replication service so {brandname} clusters can back up data across locations.
+
+[IMPORTANT]
+====
+{ispn_operator} in each {openshiftshort} cluster must have network access to the Kubernetes API.
+====
 
 [NOTE]
 ====
