Adding k8s ClusterRole for cross-site service account in docs fixes #1034

--- a/documentation/asciidoc/topics/proc_creating_kubernetes_site_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_creating_kubernetes_site_secrets.adoc
@@ -11,7 +11,8 @@ Do one of the following:
 [source,options="nowrap",subs=attributes+]
 ----
 $ kubectl create serviceaccount site-a -n ns-site-a
-$ kubectl create clusterrolebinding add-on-cluster-admin --clusterrole=cluster-admin --serviceaccount=ns-site-a:site-a
+$ kubectl create clusterrole xsite-cluster-role --verb=get,list,watch --resource=nodes,services
+$ kubectl create clusterrolebinding xsite-cluster-role-binding --clusterrole=xsite-cluster-role --serviceaccount=ns-site-a:site-a
 $ TOKENNAME=kubectl get serviceaccount/site-a -o jsonpath='{.secrets[0].name}' -n ns-site-a
 $ TOKEN=kubectl get secret $TOKENNAME -o jsonpath='{.data.token}' -n ns-site-a | base64 --decode
 $ kubectl create secret generic site-a-secret -n ns-site-a --from-literal=token=$TOKEN
