s/Apache Kafka/Kafka
terminology improvement to con_cloud_events.adoc

--- a/documentation/asciidoc/topics/con_cloud_events.adoc
+++ b/documentation/asciidoc/topics/con_cloud_events.adoc
@@ -4,7 +4,7 @@
 [role="_abstract"]
 You can send `CloudEvents` from {brandname} clusters when entries in caches are created, updated, removed, or expired.
 
-{brandname} sends structured events to Apache Kafka in JSON format, as in the following example:
+{brandname} sends structured events to Kafka in JSON format, as in the following example:
 
 [source,json,options="nowrap",subs=attributes+]
 ----
