s/Apache Kafka/Kafka
terminology improvement to proc_enabling_cloud_events.adoc

--- a/documentation/asciidoc/topics/proc_enabling_cloud_events.adoc
+++ b/documentation/asciidoc/topics/proc_enabling_cloud_events.adoc
@@ -6,7 +6,7 @@ Configure {brandname} to send `CloudEvents`.
 
 .Prerequisites
 
-* Set up an Apache Kafka cluster that listens for {brandname} topics.
+* Set up an Kafka cluster that listens for {brandname} topics.
 
 .Procedure
 
