--- a/documentation/asciidoc/topics/con_xsite_replication.adoc
+++ b/documentation/asciidoc/topics/con_xsite_replication.adoc
@@ -2,7 +2,8 @@
 = Using {ispn_operator} to manage cross-site connections
 
 [role="_abstract"]
-An {ispn_operator} in one data center can discover an {ispn_operator} in another data center and automatically form cross-site views to create global {brandname} clusters.
+{ispn_operator} in one data center can discover a {brandname} cluster that {ispn_operator} manages in another data center.
+This discovery allows {brandname} to automatically form cross-site views and create global clusters.
 
 The following illustration provides an example in which {ispn_operator} manages a {brandname} cluster at a data center in New York City, **NYC**.
 At another data center in London, **LON**, {ispn_operator} also manages a {brandname} cluster.
@@ -20,12 +21,12 @@ endif::downstream[]
 
 [IMPORTANT]
 ====
-{ispn_operator} in each {openshiftshort} cluster must have network access to the Kubernetes API.
+{ispn_operator} in each {openshiftshort} cluster must have network access to the remote Kubernetes API.
 ====
 
 [NOTE]
 ====
-When you configure automatic connections, {brandname} clusters do not start running until {ispn_operator} can establish connections with all backup locations in the configuration.
+When you configure automatic connections, {brandname} clusters do not start running until {ispn_operator} discovers all backup locations in the configuration.
 ====
 
 Each {brandname} cluster has one site master node that coordinates all backup requests.
