--- a/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
+++ b/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
@@ -8,7 +8,13 @@ ifdef::context[:parent-context: {context}]
 
 `Backup` CR:: Archives {brandname} cluster content to a persistent volume.
 `Restore` CR:: Restores archived content to a {brandname} cluster.
-
++
+[IMPORTANT]
+====
+The `Backup` and `Restore` CRs are one-time events that do not reconcile updates to the `.spec` fields.
+If the `.spec` needs updating or the execution of the backup/restore operation fails, then it's necessary for a new `Backup` or 'Restore' CR instance to be created.
+====
++
 include::{topics}/proc_backing_up_cluster.adoc[leveloffset=+1]
 include::{topics}/proc_restoring_cluster.adoc[leveloffset=+1]
 
