--- a/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
+++ b/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
@@ -8,7 +8,14 @@ ifdef::context[:parent-context: {context}]
 
 `Backup` CR:: Archives {brandname} cluster content to a persistent volume.
 `Restore` CR:: Restores archived content to a {brandname} cluster.
-
++
+[NOTE]
+====
+Modifying existing `Backup` or `Restore` CR instances has no effect.
+Backup and restore operations are "one-time" events that modify {brandname} resources.
+To update `.spec` fields for the CR, or when a backup or restore operation fails, you must create a new instance of the `Backup` or `Restore` CR.
+====
++
 include::{topics}/proc_backing_up_cluster.adoc[leveloffset=+1]
 include::{topics}/proc_restoring_cluster.adoc[leveloffset=+1]
 
