authorization docs: issue #1078

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -3,6 +3,7 @@ include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_services.adoc[leveloffset=+1]
 include::{stories}/assembly_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_encryption.adoc[leveloffset=+1]
+include::{stories}/assembly_authorization.adoc[leveloffset=+1]
 include::{stories}/assembly_network_access.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_xsite.adoc[leveloffset=+1]
