client cert docs for issue #851

--- a/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
@@ -7,6 +7,12 @@ Use custom PKCS12 keystore or TLS certificate/key pairs to encrypt connections b
 .Prerequisites
 
 * Create either a keystore or certificate secret.
++
+[NOTE]
+====
+The secret must be unique to each `Infinispan` CR instance in the {k8s} cluster.
+When you delete the `Infinispan` CR, {k8s} also automatically deletes the associated secret.
+====
 
 .Procedure
 
