--- a/documentation/asciidoc/stories/assembly_xsite_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_xsite_replication.adoc
@@ -14,6 +14,8 @@ include::{topics}/proc_creating_sa_tokens.adoc[leveloffset=+1]
 include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+1]
 include::{topics}/proc_configuring_sites.adoc[leveloffset=+1]
 include::{topics}/ref_xsite_crd.adoc[leveloffset=+2]
+include::{topics}/proc_configuring_sites_manually.adoc[leveloffset=+1]
+include::{topics}/ref_xsite_crd_manually.adoc[leveloffset=+2]
 
 
 // Restore the parent context.
